Can add collectible to collection, working on loading in a collection from file